--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ p {
   font-family: 'Didact Gothic', sans-serif;
 }
 
+
 h1 {
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
@@ -18,22 +19,25 @@ h1 {
 h2 {
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
-  font-size: 12px;
+  font-size: 30px;
   font-weight: 100;
   font-family: 'Didact Gothic', sans-serif;
+  color:white;
 }
 
-h2:hover {
-  text-shadow: 1px 1px 5px #999;
+h3:hover {
+  text-shadow: 0px 0px 50px #999;
+  transition: 0.5s;
 }
 
-h3 {
+h3 a {
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
-  margin: 20px;
-  font-size: 12px;
-  font-weight: 100;
+  font-size: 40px;
+  font-weight: 900;
   font-family: 'Didact Gothic', sans-serif;
+  color: purple;
+  transition: 0.5s;
 }
 h4 {
   -webkit-margin-before: 0em;
@@ -46,25 +50,45 @@ h4 {
 
 
 
+.background-logo {
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.deeper {
+  width: 800px;
+}
+
 
 
 
 .hamburger {
-  width: 110px;
-  height: 110px;
+  width: 180px;
+  height: 180px;
   background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
-  left: 20px;
-  top: 20px;
+  left: 30px;
+  top: 30px;
   z-index: 20;
-  border-radius: 80px;
+  border-radius: 100px;
   -webkit-box-shadow: 0px 0px 53px 0px rgba(255,255,255,1);
 -moz-box-shadow: 0px 0px 53px 0px rgba(255,255,255,1);
 box-shadow: 0px 0px 53px 0px rgba(255,255,255,1);
+transition: 1s;
 }
+
+.hamburger:hover {
+  transition: 1s;
+  -webkit-box-shadow: 0px 0px 93px 0px rgba(255,255,255,1);
+-moz-box-shadow: 0px 0px 93px 0px rgba(255,255,255,1);
+box-shadow: 0px 0px 93px 0px rgba(255,255,255,1);
+tra
+}
+
 .icons {
   display: flex;
   justify-content:flex-end;
@@ -87,21 +111,25 @@ box-shadow: 0px 0px 53px 0px rgba(255,255,255,1);
 
 
 .sidebar {
-  width: 300px;
+  width: 99%;
   position: fixed;
-  left: -310px;
-  height: 80%;
-  background-color: rgb(106, 223, 121);
-  transition: 0.3s;
+  top: -410px;
+  height: 400px;
+  background-color: black;
+  transition: 0.7s;
   z-index: 19;
   border: 5px groove rgba(164,5,62,0.51);
   border-radius: 40px;
-  bottom: 50px;
   display: flex;
   align-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
+  transition-timing-function:ease-in-out;
+}
+
+.text {
+  padding: 50px;
 }
 .sidemenu-bits {
 width: 80%;
@@ -114,7 +142,7 @@ width: 80%;
 }
 
 .sidebaropen {
-  left: 10px;
+  top: 400px;
 }
 
 .section {
@@ -136,6 +164,14 @@ width: 80%;
 
 }
 
+
+#section-1 {
+  background-color: black;
+}
+
+#section-4 {
+  background-color: black;
+}
 
 
 .textbox2 {
